--- a/index.html
+++ b/index.html
@@ -12,6 +12,15 @@
     <div class="header-wrapper bg-dark">
         <h1 class="text-white">To Do List</h1>
     </div>
+    <section>
+        <div class="container">
+            <div class="row">
+                <div class="col-12">
+                    <button id="addButton">Create List</button>
+                </div>
+            </div>
+        </div>
+    </section>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 
