--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body class="bg-secondary">
     <div class="header-wrapper bg-dark">
-        <h1 class="text-white">To Do List</h1>
+        <h1 class="text-white text-center p-lg-5">To Do List</h1>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
