--- a/index.html
+++ b/index.html
@@ -1,27 +1,30 @@
 <!doctype html>
 <html lang="en">
 
-<head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Bootstrap demo</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
-</head>
+    <head>
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <title>Bootstrap demo</title>
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+        <link rel="stylesheet" href="main.css">
+    </head>
 
-<body class="bg-secondary">
-    <div class="header-wrapper bg-dark">
-        <h1 class="text-white">To Do List</h1>
-    </div>
-    <section>
-        <div class="container">
-            <div class="row">
-                <div class="col-12">
-                    <button id="addButton">Create List</button>
+    <body class="bg-secondary">
+        <div class="header-wrapper bg-dark">
+            <h1 class="text-white">To Do List</h1>
+        </div>
+        <section>
+            <div class="container">
+                <div class="row to-do-list__row">
+                    <div class="col-12">
+                        <input type="text" id="input-text" placeholder="Add your text">
+                        <button id="addTask">Create List</button>
+                    </div>
                 </div>
             </div>
-        </div>
-    </section>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
-</body>
+        </section>
+        <script src="index .js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+    </body>
 
 </html>
